[tool.poetry]
name = "conan-htpasswd"
version = "0.1.0"
description = ""
authors = ["Francois Poizat <francois.poizat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
